Thu Apr 20 00:32:03 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler.h (fhandler_base::hclose): New virtual method.
	(fhandler_base::set_inheritance): Make this a method so that we can use
	the appropriate close methods.
	* fhandler.cc (fhandler_base::set_inheritance): Ditto.
	* path.cc (normalize_posix_path): Eliminate /.  trailing path
	component.

Wed Apr 20  0:19:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (setuid): Allow switching user context after
	successful call to ImpersonateLogedOnUser (NT only).
	(setgid): Ditto.
	(seteuid): Call setuid.
	(setegid): Call setgid.

Wed Apr 19 22:00:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* uinfo.cc (internal_getlogin): Use NetGetDCName() instead
	of NetGetAnyDCName().

Mon Apr 17 12:08:47 2000  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* syscalls.cc (_rename): Try MoveFile() at first before
	MoveFileEx(..., MOVEFILE_REPLACE_EXISTING).

Tue Apr 18 19:15:29 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (globify): Don't use \ quoting when apparently quoting a DOS
	path spec, even within a quoted string.

Sun Apr 16 18:54:21 2000  Christopher Faylor <cgf@cygnus.com>

	* init.cc (dll_entry): Use better check for determining when to set
	thread specific stuff.
	* syscalls.cc (_unlink): Continue with chmod'ing file even if
	DELETE_ON_CLOSE succeeds, if file still exists.

Fri Apr 14 23:51:15 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler_console.cc (keytable): Add support for keypad 5 key, which
	MS seems to think is equivalent to VK_CLEAR.
	* debug.cc (thread_stub): Eliminate initialization of reent stuff.
	* init.cc (dll_entry): Move it here.

Thu Apr 13 18:32:26 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (insert_file): Avoid freeing previously allocated argument
	list.
	* path.cc (symlink_info::check): Rename from symlink_check_one.  Use
	new symlink_info struct for communication.
	(path_conv::path_conv): Use symlink_info structure for communication